tests/negative/test_fnc_redef.orb
fnc foo () () {};

fnc foo () () {};

fnc main () () {};